--- a/config/database.yml
+++ b/config/database.yml
@@ -10,15 +10,27 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: ticketee_development
+  host: localhost
+  pool: 5
+  timeout: 5000
+  username: ticketee_app
+  password: '#timebending0'
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: ticketee_test
+  host: localhost
+  pool: 5
+  timeout: 5000
+  username: ticketee_app
+  password: '#timebending0'
 
 production:
   <<: *default
